--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "manishtechniz/hello-world",
+    "description": "Bagisto Package Generator",
     "type": "library",
     "autoload": {
         "psr-4": {
@@ -14,22 +15,13 @@
         }
     ],
     "license": "MIT",
+    
     "require": {
         "php": "^8.0"
     },
    
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "php-http/discovery": true
-        }
-    },
-
+    "prefer-stable": true,  
     "support": {
         "issues": "https://github.com/manishtechniz/hello-world/issues",
         "source": "https://github.com/manishtechniz/hello-world"  
